src/objects/Drive__c.object
<CustomObject>
    <fields>
        <fullName>Backlogs__c</fullName>
        <label>Backlogs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bond__c</fullName>
        <label>Bond</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Drives</relationshipLabel>
        <relationshipName>Drives</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Time__c</fullName>
        <label>Date&amp;Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_Joining__c</fullName>
        <label>Date of Joining</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Designation__c</fullName>
        <label>Designation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Detailed_package__c</fullName>
        <label>Detailed package</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Diploma__c</fullName>
        <label>Diploma</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discription_of_Round__c</fullName>
        <label>Discription of Round</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Drive_Date__c</fullName>
        <label>Drive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Drive_Details__c</fullName>
        <label>Drive Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Drive_Location__c</fullName>
        <label>Drive Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Drive_Status__c</fullName>
        <label>Drive Status</label>
        <picklist>
            <picklistValues>
                <fullName>Due</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Ongoing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Result awaited</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Drive_Type__c</fullName>
        <label>Drive Type</label>
        <picklist>
            <picklistValues>
                <fullName>On Campus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Campus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint Campus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Fair</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Eligibility__c</fullName>
        <label>Eligibility</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Eligible_Programe__c</fullName>
        <label>Eligible Programe</label>
        <picklist>
            <picklistValues>
                <fullName>B.Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCA</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Excepted_Offer__c</fullName>
        <label>Excepted Offer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gender_Eligibility__c</fullName>
        <label>Gender Eligibility</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Graduation__c</fullName>
        <label>Graduation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Job_Location__c</fullName>
        <label>Job Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Job_Profile__c</fullName>
        <label>Job Profile</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>No_of_candidates_Apperaed__c</fullName>
        <label>No of candidates Apperaed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_candidates_Placed__c</fullName>
        <label>No of candidates Placed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <label>Package</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Post_Graduation__c</fullName>
        <label>Post Graduation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prerequisites__c</fullName>
        <label>Prerequisites</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reappears_Backlogs__c</fullName>
        <label>Reappears+Backlogs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reappears__c</fullName>
        <label>Reappears</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rounds__c</fullName>
        <label>Rounds</label>
        <picklist>
            <picklistValues>
                <fullName>Written</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Face-to-Face</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Tenth__c</fullName>
        <label>Tenth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Twelfth__c</fullName>
        <label>Twelfth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Drive</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Drive ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drives</pluralLabel>
    <recordTypes>
        <fullName>Drive_RT1</fullName>
        <active>true</active>
        <label>Drive RT1</label>
    </recordTypes>
    <recordTypes>
        <fullName>Drive_RTII</fullName>
        <active>true</active>
        <label>Drive RTII</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>